Conserta permissão para realizar reserva